--- a/CH12/CH12.vcxproj
+++ b/CH12/CH12.vcxproj
@@ -139,6 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="12-1.c" />
+    <ClCompile Include="12-2.c" />
+    <ClCompile Include="12-3.c" />
+    <ClCompile Include="12-4.c" />
+    <ClCompile Include="12-5.c" />
+    <ClCompile Include="12-6.c" />
+    <ClCompile Include="12-7.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
