--- a/CH12/CH12.vcxproj
+++ b/CH12/CH12.vcxproj
@@ -139,13 +139,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="12-1-연습문제5.c" />
     <ClCompile Include="12-1.c" />
+    <ClCompile Include="12-10.c" />
+    <ClCompile Include="12-11.c" />
+    <ClCompile Include="12-2-연습문제3.c" />
+    <ClCompile Include="12-2-연습문제5.c" />
     <ClCompile Include="12-2.c" />
     <ClCompile Include="12-3.c" />
     <ClCompile Include="12-4.c" />
     <ClCompile Include="12-5.c" />
     <ClCompile Include="12-6.c" />
     <ClCompile Include="12-7.c" />
+    <ClCompile Include="12-8.c" />
+    <ClCompile Include="12-9.c" />
+    <ClCompile Include="12-도전1.c" />
+    <ClCompile Include="12-도전2.c" />
+    <ClCompile Include="12-도전3.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
